--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <!--<link type="text/css" href="css/styles.css" rel="stylesheet" />-->
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
     </head>
     <body id="page-top">
         <app-root></app-root>
